minor design changes;

--- a/app/src/main/res/drawable/ic_hand.xml
+++ b/app/src/main/res/drawable/ic_hand.xml
@@ -1,26 +1,50 @@
-<vector android:height="64dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="64dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00000000"
-        android:pathData="M226.067,184.184c-40.787,14.845 -39.615,26.968 -36.489,47.948c0.356,2.39 0.585,6.749 2.535,14.212c0.751,2.873 2.992,14.493 6.365,16.878c8.007,5.667 13.867,2.938 16.094,2.439c4.608,-1.033 11.11,-6.648 12.972,-10.265c2.9,-5.632 4.104,-11.296 4.414,-15.255c0.216,-2.772 -0.49,-8.073 0,-11.121c0.376,-2.341 7.566,-5.71 7.566,-5.71"
-        android:strokeColor="#FFFFFF" android:strokeWidth="20"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M191.073,241.936c-13.107,18.095 -7.188,34.557 11.238,54.664c8.328,9.089 18.471,18.927 26.127,12.201"
-        android:strokeColor="#FFFFFF" android:strokeWidth="20"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M203.058,298.418c-1.442,4.892 1.313,11.174 2.918,14.827c-16.442,41.06 -4.413,86.361 11.603,125.567"
-        android:strokeColor="#FFFFFF" android:strokeLineCap="round" android:strokeWidth="20"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M226.975,122.736c-20.5,-12.724 -2.883,-38.921 24.771,-18.391"
-        android:strokeColor="#FFFFFF" android:strokeWidth="20"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M251.746,104.345c81.147,49.187 99.653,92.045 127.556,123.822c1.92,2.183 16.488,15.853 15.659,43.197c-0.866,28.684 -26.744,86.017 -30.463,115.695c-1.443,11.496 -0.428,19.462 -0.428,20.104"
-        android:strokeColor="#FFFFFF" android:strokeLineCap="round" android:strokeWidth="20"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M222.963,175.273c-1.541,-1.48 -8.466,-6.766 -10.777,-7.841c-5.245,-2.441 -19.356,-4.775 -25.412,-7.699c-4.408,-2.127 -17.349,-7.057 -16.117,-19.354c0.958,-9.568 8.271,-12.812 15.723,-11.49c9.311,1.652 19.987,4.219 30.739,6.493"
-        android:strokeColor="#FFFFFF" android:strokeWidth="20"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M329.156,252.759c-16.979,-9.195 -20.182,-12.51 -30.257,-32.293c-8.591,-17.636 -32.117,-83.295 -32.117,-83.295c-5.229,-13.891 -20.765,-20.888 -34.708,-15.627c-13.94,5.26 -21.005,20.787 -15.779,34.678c0,0 22.21,55.686 27.19,78.984c1.195,5.596 5.245,14.558 0.146,24.611c-18.222,35.928 -20.5,79.84 -13.381,119.045"
-        android:strokeColor="#FFFFFF" android:strokeLineCap="round" android:strokeWidth="20"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M403.123,120.145l-46.397,-3.502h-91.209v-0.114l-13.991,-0.456v-1.665l-23.983,-2.247l-133.45,0.818c-9.012,0 -9.73,3.604 -9.664,8.599C37.76,121.578 3.51,121.184 0,125.468c3.51,4.284 37.76,3.89 84.429,3.89c-0.066,4.995 0.652,8.599 9.664,8.599l133.45,0.819l23.983,-2.248v-2.442l13.991,-0.728h91.209l46.397,-5.573V120.145z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M493.264,87.142c-8.387,-13.854 -22.756,-14.522 -37.881,-13.737l-16.626,0.364c-15.589,0.636 -17.715,-1.138 -27.435,8.097l-37.633,33.024l31.092,2.911v11.646l-31.092,5.003l37.633,29.158c9.72,9.234 11.846,7.46 27.435,8.097l16.626,0.364c15.125,0.785 29.494,0.117 37.881,-13.737c5.207,-8.603 18.736,-35.594 18.736,-35.594S498.471,95.744 493.264,87.142z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="96dp"
+    android:height="96dp"
+    android:viewportWidth="96"
+    android:viewportHeight="96">
+  <path
+      android:pathData="M42.388,29.144c-7.647,3.897 -7.428,7.081 -6.842,12.589c0.067,0.627 0.11,1.772 0.476,3.731c0.141,0.754 0.561,3.805 1.193,4.432c1.501,1.488 2.6,0.771 3.018,0.641c0.864,-0.271 2.083,-1.746 2.432,-2.695c0.544,-1.479 0.77,-2.966 0.828,-4.005c0.041,-0.728 -0.092,-2.12 0,-2.919c0.07,-0.615 1.418,-1.5 1.418,-1.5"
+      android:strokeWidth="1.7088"
+      android:fillColor="#00000000"
+      android:strokeColor="#FFFFFF"/>
+  <path
+      android:pathData="M35.826,44.308c-2.458,4.751 -1.348,9.073 2.107,14.353c1.562,2.387 3.463,4.969 4.899,3.204"
+      android:strokeWidth="1.7088"
+      android:fillColor="#00000000"
+      android:strokeColor="#FFFFFF"/>
+  <path
+      android:pathData="M38.073,59.138c-0.27,1.284 0.246,2.934 0.547,3.893C35.538,73.812 37.793,85.706 40.796,96"
+      android:strokeWidth="1.7088"
+      android:fillColor="#00000000"
+      android:strokeColor="#FFFFFF"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M42.558,13.01c-3.844,-3.341 -0.541,-10.219 4.645,-4.829"
+      android:strokeWidth="1.7088"
+      android:fillColor="#00000000"
+      android:strokeColor="#FFFFFF"/>
+  <path
+      android:pathData="M47.202,8.181c15.215,12.915 18.685,24.168 23.917,32.511c0.359,0.573 3.092,4.162 2.936,11.342c-0.162,7.531 -5.014,22.585 -5.711,30.378c-0.271,3.018 -0.08,5.109 -0.08,5.277"
+      android:strokeWidth="1.7088"
+      android:fillColor="#00000000"
+      android:strokeColor="#FFFFFF"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M41.806,26.804c-0.289,-0.388 -1.587,-1.776 -2.021,-2.059c-0.983,-0.641 -3.629,-1.254 -4.765,-2.021c-0.826,-0.559 -3.253,-1.853 -3.022,-5.082c0.18,-2.513 1.551,-3.364 2.948,-3.017c1.746,0.434 3.748,1.108 5.764,1.705"
+      android:strokeWidth="1.7088"
+      android:fillColor="#00000000"
+      android:strokeColor="#FFFFFF"/>
+  <path
+      android:pathData="M61.717,47.149c-3.184,-2.415 -3.784,-3.285 -5.673,-8.479C54.434,34.04 50.021,16.8 50.021,16.8c-0.98,-3.647 -3.894,-5.484 -6.507,-4.103c-2.614,1.381 -3.939,5.458 -2.959,9.105c0,0 4.165,14.621 5.098,20.739c0.224,1.469 0.983,3.822 0.027,6.461c-3.417,9.434 -3.844,20.963 -2.509,31.257"
+      android:strokeWidth="1.7088"
+      android:fillColor="#00000000"
+      android:strokeColor="#FFFFFF"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M75.586,12.329l-8.7,-0.919H49.784v-0.03l-2.623,-0.12v-0.437l-4.497,-0.59l-25.021,0.215c-1.69,0 -1.825,0.946 -1.812,2.258c-8.75,0 -15.172,-0.104 -15.831,1.021c0.658,1.125 7.08,1.021 15.831,1.021c-0.013,1.312 0.122,2.258 1.812,2.258l25.021,0.215l4.497,-0.59V15.99l2.623,-0.191h17.102l8.7,-1.463V12.329z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M92.486,3.664c-1.572,-3.638 -4.266,-3.813 -7.103,-3.607l-3.116,0.096c-2.924,0.167 -3.322,-0.299 -5.145,2.126l-7.057,8.671l5.83,0.765v3.058l-5.83,1.313l7.057,7.656c1.822,2.424 2.221,1.958 5.145,2.125l3.116,0.096c2.837,0.206 5.53,0.031 7.103,-3.607C93.463,20.097 96,13.01 96,13.01S93.463,5.923 92.486,3.664z"
+      android:fillColor="#FFFFFF"/>
 </vector>
