--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -32,9 +32,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
             android:layout_margin="16dp"
+            android:backgroundTint="@color/darts_red"
             android:onClick="@{() -> scoreViewModel.restartGame()}"
-            android:text="Start new game"
-            android:textColor="@color/purple_200"
+            android:text="@string/start_new_game"
+            android:textColor="@color/white"
             android:visibility="@{scoreViewModel.isGameOver ? View.VISIBLE : View.INVISIBLE}" />
 
         <TextView
@@ -43,6 +44,7 @@
             android:layout_gravity="center"
             android:layout_margin="32dp"
             android:gravity="center"
+            android:textColor="@color/white"
             android:text="@string/start_playing_by_adding_your_throws"
             android:textSize="28sp"
             android:textStyle="bold"
@@ -54,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_margin="16dp"
-            android:backgroundTint="@color/darts_red"
+            app:backgroundTint="@color/darts_red"
             android:src="@drawable/ic_hand"
             android:visibility="@{scoreViewModel.isGameOver ? View.INVISIBLE : View.VISIBLE}"
             app:layout_anchor="@id/recycler_view"
