--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -34,13 +34,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="16dp"
-            android:text="@{`Game: ` + String.valueOf(historyViewModel.selectedGameAndTosses.savedGame.points) + `   Total throws: ` + String.valueOf(historyViewModel.selectedGameAndTosses.savedTossList.size())}"
+            android:text="@{@string/game_details_game_throws(historyViewModel.selectedGameAndTosses.savedGame.points, historyViewModel.selectedGameAndTosses.savedTossList.size())}"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timestamp_text"
             tools:text="Game: 501 Total throws: 27" />
+<!--        android:text="@{`Game: ` + String.valueOf(historyViewModel.selectedGameAndTosses.savedGame.points) + `   Total throws: ` + String.valueOf(historyViewModel.selectedGameAndTosses.savedTossList.size())}"-->
 
         <TextView
             android:id="@+id/tosses"
