--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -13,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="16dp"
         tools:context="fragments.gamedetails.GameDetailsFragment">
 
         <TextView
@@ -23,12 +24,12 @@
             android:layout_marginVertical="16dp"
             android:textSize="24sp"
             android:textStyle="bold"
+            android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Friday, 25 Mar 2021, 18:13" />
 
-        <!-- TODO: move to BindingAdapter-->
         <TextView
             android:id="@+id/game_text"
             android:layout_width="wrap_content"
@@ -41,7 +42,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timestamp_text"
             tools:text="Game: 501 Total throws: 27" />
-<!--        android:text="@{`Game: ` + String.valueOf(historyViewModel.selectedGameAndTosses.savedGame.points) + `   Total throws: ` + String.valueOf(historyViewModel.selectedGameAndTosses.savedTossList.size())}"-->
 
         <TextView
             android:id="@+id/tosses"
