--- a/app/src/main/res/menu/game_item_menu.xml
+++ b/app/src/main/res/menu/game_item_menu.xml
@@ -2,5 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item
     android:id="@+id/game_item_delete"
-    android:title="Delete" />
+    android:title="@string/delete" />
 </menu>
