added item_toss layout for tablets;

--- a/app/src/main/res/layout-sw500dp/item_toss.xml
+++ b/app/src/main/res/layout-sw500dp/item_toss.xml
@@ -16,23 +16,23 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="24dp"
-        tools:layout_width="120dp">
+        android:layout_marginHorizontal="50dp"
+        tools:layout_width="260dp">
 
         <ImageView
             android:id="@+id/number_image_view"
             numberImage="@{toss.Section}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginVertical="30dp"
+            android:layout_marginHorizontal="30dp"
             app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/ic_wire_14" />
+            tools:src="@drawable/ic_wire_2" />
 
         <ImageView
             android:id="@+id/not_counted_image_view"
@@ -47,12 +47,13 @@
         <ImageView
             android:id="@+id/ring_image_view"
             ringImage="@{toss.Ring}"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:src="@drawable/ic_badge_x3" />
+            tools:src="@drawable/ic_badge_x2" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
