--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawerHeader"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:background="@color/darts_green_dark"
+    android:background="@color/darts_green"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
