--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,8 +24,6 @@
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
         <item name="android:background">@color/black</item>
         <item name="android:theme">@style/DtcToolbarTheme</item>
-        <item name="titleTextAppearance">@style/CustomTitleTextAppearance</item>
-        <item name="subtitleTextAppearance">@style/CustomSubTitleTextAppearance</item>
     </style>
 
     <style name="DtcToolbarTheme">
@@ -34,20 +32,14 @@
         <!-- Used to color back button and three dots -->
         <item name="android:textColorSecondary">@color/white</item>
     </style>
-
-    <style name="CustomTitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
-        <!--        <item name="android:fontFamily">@string/ff_roboto_condensed</item>-->
-        <!--        <item name="android:textSize">16sp</item>-->
-        <!--        <item name="android:textColor">@color/amber_500_primary</item>-->
-        <!--        <item name="android:textStyle">bold</item>-->
-    </style>
-
-    <style name="CustomSubTitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Subtitle">
-        <!--        <item name="android:fontFamily">@string/ff_roboto_condensed</item>-->
-        <!--        <item name="android:textSize">14sp</item>-->
-        <!--        <item name="android:textColor">@color/pink_500_primary</item>-->
-        <!--        <item name="android:textStyle">italic</item>-->
-    </style>
     <!--  </editor-fold>  -->
+
+    <style name="score_fragment_bottom_button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:background">@drawable/button_rounded_corners</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
 </resources>
