fixed margin error for TextView "Start playing by ..."

--- a/app/src/main/res/layout/fragment_score.xml
+++ b/app/src/main/res/layout/fragment_score.xml
@@ -51,9 +51,9 @@
             tools:visibility="invisible" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="32dp"
+            android:layout_margin="16dp"
             android:gravity="center"
             android:text="@string/start_playing_by_adding_your_throws"
             android:textColor="@color/white"
