--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/historyFragment"
+        android:id="@+id/historyDestination"
         android:icon="@drawable/ic_history"
         android:title="@string/history"  />
 
